Edition du pom.xml pour créer un projet maven capable d'executer des fichier junit5